Initialize MCP Security Risks project with backend, frontend, and shared libraries. Add configuration files, setup instructions, and basic structure for security testing and chat functionalities.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,21 @@
     },
     {
       "path": "./apps/mcp-security-risks"
+    },
+    {
+      "path": "./apps/backend-e2e"
+    },
+    {
+      "path": "./apps/backend"
+    },
+    {
+      "path": "./libs/shared"
+    },
+    {
+      "path": "./libs/mcp-tools"
+    },
+    {
+      "path": "./libs/security-tests"
     }
   ]
 }
