--- a/package.json
+++ b/package.json
@@ -2,31 +2,60 @@
   "name": "@mcp-security-risks/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "dev": "concurrently \"npm run backend:serve\" \"npm run frontend:serve\"",
+    "backend:serve": "nx serve backend",
+    "frontend:serve": "nx serve @mcp-security-risks/mcp-security-risks",
+    "build": "nx build @mcp-security-risks/mcp-security-risks && nx build backend",
+    "test": "nx test",
+    "test:security": "nx test security-tests",
+    "lint": "nx lint"
+  },
   "private": true,
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.22",
+    "@ai-sdk/vercel": "^1.0.13",
+    "@nestjs/common": "^11.1.6",
+    "@nestjs/core": "^11.1.6",
+    "@nestjs/platform-express": "^11.1.6",
+    "@nestjs/platform-socket.io": "^11.1.6",
+    "@nestjs/websockets": "^11.1.6",
+    "ai": "^5.0.26",
+    "axios": "^1.6.0",
+    "cors": "^2.8.5",
+    "helmet": "^8.1.0",
     "next": "~15.2.4",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^2.1.1",
     "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^11.0.0",
+    "@nestjs/testing": "^11.0.0",
     "@next/eslint-plugin-next": "^15.2.4",
     "@nx/devkit": "21.4.1",
     "@nx/eslint": "21.4.1",
     "@nx/eslint-plugin": "21.4.1",
     "@nx/jest": "21.4.1",
     "@nx/js": "21.4.1",
+    "@nx/nest": "^21.4.1",
     "@nx/next": "21.4.1",
+    "@nx/node": "21.4.1",
     "@nx/playwright": "21.4.1",
+    "@nx/web": "21.4.1",
+    "@nx/webpack": "21.4.1",
     "@nx/workspace": "21.4.1",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@swc/jest": "~0.2.38",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
     "@types/jest": "^30.0.0",
@@ -34,6 +63,7 @@
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "babel-jest": "^30.0.2",
+    "concurrently": "^8.2.2",
     "eslint": "^9.8.0",
     "eslint-config-next": "^15.2.4",
     "eslint-config-prettier": "^10.0.0",
@@ -44,7 +74,9 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^30.0.2",
     "jest-environment-jsdom": "^30.0.2",
+    "jest-environment-node": "^30.0.2",
     "jest-util": "^30.0.2",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "21.4.1",
     "prettier": "^2.6.2",
     "sass": "1.62.1",
@@ -52,9 +84,11 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
-    "typescript-eslint": "^8.29.0"
+    "typescript-eslint": "^8.29.0",
+    "webpack-cli": "^5.1.4"
   },
   "workspaces": [
-    "apps/*"
+    "apps/*",
+    "libs/*"
   ]
 }
