Enhance MCP Security Risks application with Tailwind CSS integration. Update package dependencies, including Tailwind CSS and PostCSS. Revamp UI components for improved aesthetics and usability, including the Chat Interface, Navigation, and Security Dashboard. Add global styles and enhance layout for better user experience.

--- a/package.json
+++ b/package.json
@@ -56,12 +56,14 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@swc/jest": "~0.2.38",
+    "@tailwindcss/postcss": "^4.1.12",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
     "@types/jest": "^30.0.0",
     "@types/node": "20.19.9",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "autoprefixer": "^10.4.21",
     "babel-jest": "^30.0.2",
     "concurrently": "^8.2.2",
     "eslint": "^9.8.0",
@@ -78,8 +80,10 @@
     "jest-util": "^30.0.2",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "21.4.1",
+    "postcss": "^8.5.6",
     "prettier": "^2.6.2",
     "sass": "1.62.1",
+    "tailwindcss": "^4.1.12",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
