Implement security validation features in the MCP Security Risks application. Add new endpoints for chat processing, including raw attack mode. Enhance security testing capabilities with feature flags and improved logging. Update UI components to support new functionalities and provide debugging information. Modify package scripts for better development workflow.

--- a/env.example
+++ b/env.example
@@ -9,6 +9,7 @@ NODE_ENV=development
 
 # Security Testing Configuration
 ENABLE_SECURITY_TESTS=true
+BYPASS_SECURITY_VALIDATION=false
 LOG_LEVEL=debug
 SECURITY_LOG_LEVEL=verbose
 
