--- a/env.example
+++ b/env.example
@@ -1,6 +1,10 @@
-# OpenAI Configuration
+# OpenAI Configuration (optional)
 OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_MODEL=gpt-4o-mini
+
+# Anthropic Configuration (preferred)
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+ANTHROPIC_MODEL=claude-3-5-haiku-latest
 
 # Backend Configuration
 BACKEND_PORT=3001
