--- a/libs/shared/.swcrc
+++ b/libs/shared/.swcrc
@@ -15,7 +15,7 @@
     "loose": true
   },
   "module": {
-    "type": "es6",
+    "type": "commonjs",
     "strict": false,
     "strictMode": true,
     "lazy": false,
