Add MCP method disclosure features and enhance chat interface
- Implement new endpoints for listing MCP methods in the backend.
- Update ChatService to optionally use MCP tools and disclose available methods.
- Enhance ChatInterface to support toggling MCP method disclosure and tool usage.
- Revise Postman testing guide to include new MCP method disclosure tests.
- Update TypeScript configurations to include new MCP tools library.

--- a/apps/backend/tsconfig.app.json
+++ b/apps/backend/tsconfig.app.json
@@ -28,6 +28,9 @@
     },
     {
       "path": "../../libs/shared/tsconfig.lib.json"
+    },
+    {
+      "path": "../../libs/mcp-tools/tsconfig.lib.json"
     }
   ]
 }
