Add Vercel AI integration and enhance chat service functionality
- Introduced Vercel AI SDK integration for enhanced chat capabilities, allowing users to leverage the Anthropic Haiku model.
- Added new endpoint for processing chat requests with Vercel AI, including support for MCP tools.
- Updated ChatService to handle Vercel AI requests, incorporating security validation and tool execution.
- Enhanced ChatInterface with a toggle for Vercel AI usage, improving user experience.
- Updated package dependencies to include new AI SDKs and tools.
- Added comprehensive documentation for Vercel AI feature and backend service usage.

--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
   },
   "private": true,
   "dependencies": {
-  "@ai-sdk/vercel": "^1.0.13",
+    "@ai-sdk/anthropic": "^2.0.9",
+    "@ai-sdk/openai": "^2.0.23",
+    "@ai-sdk/vercel": "^1.0.13",
+    "@modelcontextprotocol/sdk": "^1.17.4",
     "@nestjs/common": "^11.1.6",
     "@nestjs/core": "^11.1.6",
     "@nestjs/platform-express": "^11.1.6",
     "@nestjs/platform-socket.io": "^11.1.6",
     "@nestjs/websockets": "^11.1.6",
-  "ai": "^5.0.26",
+    "ai": "^5.0.26",
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "helmet": "^8.1.0",
